# ESP32S3-custom-firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ha_mqtt.c  ha_mqtt.h  main.c  ota.c  ota.h  relay.c  relay.h  safety.c  safety.h  scd4x.c  scd4x.h  storage.c  storage.h  time_sync.c  time_sync.h  wifi.c  wifi.h
